Hover & Menu Button - Limited hover effects to nav and socials -Fixed Nav font-size on smaller screens - Added 'X' on click to 'Ham Menu' - Date is now shown on page. - Added contact information.

--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -21,6 +21,9 @@
         grid-column: 1/2;
         margin-left: 5em;
     }
+    .navigation a {
+        font-size: 1.5em;
+    }
     .social-media {
         grid-column: 2/3;
     }
