--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -75,7 +75,7 @@ nav {
 	display: block;
 	text-decoration: none;
     color: rgb(0, 255, 157);
-    font-size: 1.5em;
+    font-size: 1em;
 }
 
 /* Responsive actions */
@@ -83,7 +83,7 @@ nav {
 	display: none;
 }
 
-header a::after {
+.navigation a::after, .social-media a::after{
     content: "";
     display: block;
     width: 100%;
@@ -94,7 +94,7 @@ header a::after {
 }
 a:hover::after {
     transform: scaleX(1);
-  }
+}
 
 /* Menu Button*/
 .nav-menu {
@@ -118,6 +118,13 @@ a:hover::after {
 .current-date{
     grid-row: 3/4;
     grid-column: 1/4;
+    outline-style: solid;
+    outline-color: rgb(0, 126, 78);
+    background-color: rgba(0, 0, 0, 0.205);
+    color: rgb(51, 255, 177);
+    padding: .2em;
+    margin: 1em;
+    width: 100%;
 }
 
 /* Social Media */
